# WMEWS

./: .gitignore  AGENTS.md  README.md
api/: README.md  main.py  pyproject.toml
api/tests/: test_main.py
docs/: bmi270.md  m5pm1.md  m5stacks3.md
firmware/: CMakeLists.txt  README.md  config.csv.example
firmware/main/: CMakeLists.txt  bmi270.c  bmi270.h  bmi270_config_image.inc  config.c  config.h  data_recorder.c  data_recorder.h  hello_world_main.c  network.c  network.h  power.c  power.h  uploader.c  uploader.h  uploader_http.c  uploader_http.h  uploader_json.c  uploader_json.h
terraform/: .gitignore  .terraform.lock.hcl  TUTORIAL.md  api.tf  data.tf  main.tf  outputs.tf  package_lambda.sh  terraform.tfvars.example  variables.tf  versions.tf
