[project]
name = "wmews-ingest-api"
version = "0.1.0"
description = "Ingest API scaffold for the Washing Machine Early Warning System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115,<0.116",
    "mangum>=0.19,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
