[project]
name = "wmews-ingest-api"
version = "0.1.0"
description = "Ingest API scaffold for the Washing Machine Early Warning System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35,<2.0",
    "fastapi[standard]>=0.115,<0.116",
    "mangum>=0.19,<1.0",
    "uuid6>=2024.7.10,<2025.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
